--- a/projects/ravi-lms/src/app/Courses/cyber.security/cyber.security.component.css
+++ b/projects/ravi-lms/src/app/Courses/cyber.security/cyber.security.component.css
@@ -74,7 +74,7 @@
 
 /* What's Inside */
 .course-modules {
-  background-color: #f9f9f9;
+  background-color: #151313;
   padding: 2rem;
 }
 
@@ -82,6 +82,7 @@
   text-align: center;
   font-size: 2rem;
   margin-bottom: 2rem;
+  color: #fff;
 }
 
 .modules-grid {
@@ -93,10 +94,10 @@
 }
 
 .module-card {
-  background: white;
+  background: rgb(197, 193, 193);
   border-radius: 8px;
   overflow: hidden;
-  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.08);
+  box-shadow: 0 4px 15px rgba(245, 245, 245, 0.943);
   text-align: center;
   padding: 1rem;
   transition: transform 0.3s;
