--- a/projects/ravi-lms/src/app/Courses/ux/ux.component.css
+++ b/projects/ravi-lms/src/app/Courses/ux/ux.component.css
@@ -70,7 +70,7 @@
 }
 
 .course-modules {
-  background-color: #f9f9f9;
+  background-color: #151313;
   padding: 2rem;
 }
 
@@ -78,6 +78,7 @@
   text-align: center;
   font-size: 2rem;
   margin-bottom: 2rem;
+  color: #ddd;
 }
 
 .modules-grid {
@@ -89,10 +90,10 @@
 }
 
 .module-card {
-  background: white;
+  background: rgb(180, 176, 176);
   border-radius: 8px;
   overflow: hidden;
-  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.08);
+  box-shadow: 0 4px 15px rgba(236, 235, 235, 0.925);
   text-align: center;
   padding: 1rem;
   transition: transform 0.3s;
