--- a/projects/ravi-lms/src/app/Courses/sql.server/sql.server.component.css
+++ b/projects/ravi-lms/src/app/Courses/sql.server/sql.server.component.css
@@ -77,7 +77,7 @@
 
 /* Course Modules */
 .course-modules {
-  background-color: #f9f9f9;
+  background-color: #0f0e0e;
   padding: 2rem;
 }
 
@@ -85,6 +85,7 @@
   text-align: center;
   font-size: 2rem;
   margin-bottom: 2rem;
+  color: #fff;
 }
 
 .modules-grid {
@@ -96,10 +97,10 @@
 }
 
 .module-card {
-  background: white;
+  background: rgb(231, 228, 228);
   border-radius: 8px;
   overflow: hidden;
-  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.08);
+  box-shadow: 0 4px 15px rgba(240, 239, 239, 0.925);
   text-align: center;
   padding: 1rem;
   transition: transform 0.3s;
