--- a/projects/ravi-lms/src/app/Courses/fullstack/fullstack.component.css
+++ b/projects/ravi-lms/src/app/Courses/fullstack/fullstack.component.css
@@ -1,8 +1,8 @@
 
 .fullstack-course-page {
   font-family: 'Segoe UI', sans-serif;
-  color: #333;
-  background-color: #fff;
+  color: #070000;
+  background-color: #f5f2f2;
   line-height: 1.6;
 }
 
