--- a/projects/ravi-lms/src/app/Courses/phython/phython.component.css
+++ b/projects/ravi-lms/src/app/Courses/phython/phython.component.css
@@ -75,7 +75,7 @@
 
 /* What's Inside */
 .course-modules {
-  background-color: #f9f9f9;
+  background-color: #1f1e1e;
   padding: 2rem;
 }
 
@@ -83,6 +83,7 @@
   text-align: center;
   font-size: 2rem;
   margin-bottom: 2rem;
+  color: #f9f9f9;
 }
 
 .modules-grid {
@@ -94,10 +95,10 @@
 }
 
 .module-card {
-  background: white;
+  background: rgb(238, 236, 236);
   border-radius: 8px;
   overflow: hidden;
-  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.08);
+  box-shadow: 0 4px 15px rgba(219, 218, 218, 0.865);
   text-align: center;
   padding: 1rem;
   transition: transform 0.3s;
