--- a/projects/ravi-lms/src/app/components/home/home.component.html
+++ b/projects/ravi-lms/src/app/components/home/home.component.html
@@ -13,6 +13,9 @@
     <a href="#best-teachers" class="nav-link">
       <img src="https://img.icons8.com/ios-filled/24/ffffff/developer.png" alt="Creators Icon" class="nav-icon">
     </a>
+    <a href="#best-courses" class="nav-link">
+      <img src="https://img.icons8.com/ios-filled/24/ffffff/classroom.png" alt="Courses Icon" class="nav-icon">
+     </a>
   </div>
 </nav>
 
@@ -34,7 +37,8 @@
   </div>
 
   <!-- Best Courses Section -->
-  <div class="best-courses-section text-center">   
+  <div class="best-courses-section text-center">  
+    <section id="best-courses"></section> 
     <h2>Our Best Courses</h2>
     <div class="courses-row">
         <div class="course-card" *ngFor="let course of bestCourses">
@@ -102,4 +106,6 @@
       </a>
     </div>
   </footer>
+
+
 
