--- a/projects/ravi-lms/src/app/components/home/home.component.html
+++ b/projects/ravi-lms/src/app/components/home/home.component.html
@@ -86,7 +86,7 @@
    </div>
 
 
-  <footer class="footer" style="text-align: center; padding: 20px; background-color: #1c1c1e;">
+  <!-- <footer class="footer" style="text-align: center; padding: 20px; background-color: #1c1c1e;">
     <div style="margin-bottom: 10px;">
       &copy; 2025 RHS. All rights reserved.
       |
@@ -105,7 +105,7 @@
         <i class="fab fa-x-twitter" style="font-size: 24px; color: #d1c6c6;"></i>
       </a>
     </div>
-  </footer>
+  </footer> -->
 
 
 
