--- a/projects/ravi-lms/src/app/Courses/footer/footer.component.css
+++ b/projects/ravi-lms/src/app/Courses/footer/footer.component.css
@@ -1,12 +1,12 @@
 /* Footer base */
 .footer {
-  background: linear-gradient(135deg, #1c1c1e, #2c2c2e);
+  background: linear-gradient(135deg, #8e9797, #192021);
   color: #ddd;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   padding: 40px 20px;
   font-size: 14px;
   line-height: 1.5;
-  border-top: 3px solid #4caf50;
+  border-top: 3px solid #080808;
 }
 
 /* Top section with info and social */
@@ -25,7 +25,7 @@
 }
 
 .footer-info a {
-  color: #8bc34a;
+  color: #080708;
   text-decoration: none;
   margin: 0 5px;
   transition: color 0.3s;
@@ -44,7 +44,7 @@
 }
 
 .footer-social a:hover {
-  color: #4caf50;
+  color: #dfe6df;
 }
 
 /* Links columns */
@@ -61,7 +61,7 @@
 }
 
 .footer-column h3 {
-  color: #4caf50;
+  color: #51066d;
   margin-bottom: 15px;
   font-weight: 700;
   font-size: 18px;
@@ -80,7 +80,7 @@
 }
 
 .footer-column ul li a {
-  color: #bbb;
+  color: #070303;
   text-decoration: none;
   transition: color 0.3s;
 }
@@ -109,6 +109,8 @@
 
   .footer-social {
     margin-top: 15px;
+    justify-content: center;
+    align-items: center;
   }
 
   .footer-links {
@@ -142,7 +144,10 @@
 }
 
 .footer-social {
+  display: flex;
   margin-top: 10px;
+  justify-content: center;
+  align-items: center;
 }
 
 .footer-social a {
