--- a/projects/ravi-lms/src/app/Dashboard/student-dashboard/student-dashboard.component.html
+++ b/projects/ravi-lms/src/app/Dashboard/student-dashboard/student-dashboard.component.html
@@ -12,6 +12,9 @@
   <div class="dashboard-body">
     <!-- Sidebar -->
     <aside class="sidebar">
+      <div class="sidebar-header">
+       <img src="/images/RHSlogo.jpg" alt="Admin Avatar" class="admin-avatar" />
+      </div>
       <ul class="sidebar-nav">
 
         <li><a href="#" (click)="setActiveSection('assignments'); $event.preventDefault()" [class.active]="activeSection === 'assignments'">📝 Assignments</a></li>
