--- a/projects/ravi-lms/src/app/Dashboard/admin-dashboard/admin-dashboard.component.css
+++ b/projects/ravi-lms/src/app/Dashboard/admin-dashboard/admin-dashboard.component.css
@@ -26,6 +26,7 @@ body {
   align-items: center;
   position: relative;
   transition: background-color 0.3s ease;
+  gap: 1px;
 }
 
 .sidebar:hover {
@@ -132,10 +133,10 @@ body {
 .stat-card {
   flex: 1 1 220px;
   background: linear-gradient(145deg, #e0f7f9, #cbf0f6);
-  border-left: 12px solid #09e39e;
-  padding: 1.5rem 3rem;
+  border-left: 12px solid #000000;
+  padding: 1rem 2.5rem;
   border-radius: 30px;
-  box-shadow: 0 6px 18px rgba(9, 227, 158, 0.3);
+  box-shadow: 0 6px 18px rgba(20, 20, 20, 0.3);
   transition: transform 0.3s ease, box-shadow 0.3s ease;
   cursor: default;
   user-select: none;
@@ -143,7 +144,7 @@ body {
 
 .stat-card:hover {
   transform: translateY(-6px);
-  box-shadow: 0 10px 28px rgba(9, 227, 158, 0.5);
+  box-shadow: 0 10px 28px rgba(29, 30, 29, 0.5);
 }
 
 .stat-approved {
