--- a/projects/ravi-lms/src/app/Component/login/login.component.html
+++ b/projects/ravi-lms/src/app/Component/login/login.component.html
@@ -25,17 +25,17 @@
     <form (ngSubmit)="login()">
       <div class="form-group">
         <label>Email</label>
-        <input [(ngModel)]="email" name="email" type="email" class="form-control" required />
+        <input [(ngModel)]="email" name="email" type="email" placeholder="Enter your EmailId" class="form-control" required />
       </div>
 
       <div class="form-group">
         <label>Password</label>
-        <input [(ngModel)]="password" name="password" type="password" class="form-control" required />
+        <input [(ngModel)]="password" name="password" type="password" placeholder="Enter Your Password" class="form-control" required />
       </div>
 
       <div class="form-group">
         <label>Role</label>
-        <select [(ngModel)]="role" name="role" class="form-control">
+        <select [(ngModel)]="role" name="role"  class="form-control">
           <option value="Student">Student</option>
           <option value="Teacher">Teacher</option>
           <option value="Admin">Admin</option>
