--- a/projects/ravi-lms/src/app/components/home/home.component.html
+++ b/projects/ravi-lms/src/app/components/home/home.component.html
@@ -4,20 +4,13 @@
     <span class="nav-title"> LEARNING MANAGEMENT SYSTEM </span>
   </div>
   <div class="nav-right">
-    <a href="#" class="nav-link">
-      <img src="https://img.icons8.com/ios-filled/24/ffffff/home.png" alt="Home Icon" class="nav-icon">
-    </a>
-    <a href="#glass-card2" class="nav-link">
-      <img src="https://img.icons8.com/ios-filled/24/ffffff/info.png" alt="About Icon" class="nav-icon">
-    </a> 
-    <a href="#best-teachers" class="nav-link">
-      <img src="https://img.icons8.com/ios-filled/24/ffffff/developer.png" alt="Creators Icon" class="nav-icon">
-    </a>
-    <a href="#best-courses" class="nav-link">
-      <img src="https://img.icons8.com/ios-filled/24/ffffff/classroom.png" alt="Courses Icon" class="nav-icon">
-     </a>
+    <a href="#" class="nav-link">Home</a>
+    <a href="#glass-card2" class="nav-link">About</a>
+    <a href="#best-teachers" class="nav-link">Creators</a>
+    <a href="#best-courses" class="nav-link">Courses</a>
   </div>
 </nav>
+
 
 
 
