--- a/projects/ravi-lms/src/app/components/home/home.component.css
+++ b/projects/ravi-lms/src/app/components/home/home.component.css
@@ -68,14 +68,14 @@ html {
 
 .nav-right {
   display: flex;
-  gap: 20px;
+  gap: 40px;
   flex-wrap: wrap;
 }
 
 .nav-link {
   text-decoration: none;
   color: rgb(235, 231, 231);
-  font-size: 16px;
+  font-size: 19px;
   transition: color 0.3s;
 }
 
@@ -91,7 +91,7 @@ html {
 }
 
 .nav-link:hover {
-  color: #1a703d;            /* Text color changes to blue on hover */
+  color: #fe0303e5;            /* Text color changes to blue on hover */
 }
 
 .nav-link:hover .nav-icon {
@@ -347,6 +347,12 @@ body, html {
   transform: scale(1.2);
   transition: transform 0.3s;
 }
+
+
+
+
+
+
 
 
 
