--- a/projects/ravi-lms/src/app/Dashboard/admin-dashboard/admin-dashboard.component.css
+++ b/projects/ravi-lms/src/app/Dashboard/admin-dashboard/admin-dashboard.component.css
@@ -221,7 +221,7 @@ body {
   text-align: center;
   padding: 1rem;
   font-style: italic;
-  color: #9e9e9e;
+  color: #d1a5a5;
 }
 
 /* Buttons */
@@ -230,7 +230,7 @@ body {
   font-size: 13px;
   border: none;
   border-radius: 8px;
-  font-weight: 600;
+  font-weight: 700;
   cursor: pointer;
   display: inline-flex;
   align-items: center;
@@ -269,4 +269,4 @@ h2 {
   font-size: 1.4rem;
   font-weight: 800;
   margin-bottom: 1rem;
-}
+}  
